# FlexCFD

./: .clang-format  CMakeLists.txt  LICENSE  README.md  conanfile.py
PdeSystem/: BoundaryCondition.hpp  ModelParams.hpp  PDESystem.hpp
PdeSystem/SVE/: CSVE.hpp  PDESystem.hpp  PDEType.hpp  SVE.hpp  SVEcas.hpp
PdeSystem/SWE/: CSWE.hpp  SWE.hpp  SWE2d.hpp  SWE2dcas.hpp
SolTools/: CMakeLists.txt  Casulliwrap.hpp
SolTools/casulliwrap/: CG.hpp  Casulliwrap.hpp
SolTools/petscwrap/: PetscWrap.hpp
Utils/itertools/: Squarerange.hpp
casulliwrap-swenow/Source/Itertools/: itertools.hpp
casulliwrap-swenow/Source/PdeModel/: ModelParams.hpp  PDEParams.hpp  PDEType.hpp
casulliwrap/Source/: Readme.md
casulliwrap/Source/PdeModel/: GridParams.hpp
casulliwrap/Source/PdeNeumerics/: Getindex.hpp  IterCallbacks.hpp
cfd/: .clang-tidy  BUILDING.md
cfd/extras/: FlexCFD.cpp  FlexCFD_types.hpp  IterTools.h  Makefile  heat.c
cfd/source/: main.cpp
cfd/source/fcfd/itertools/: CMakeLists.txt
cfd/source/fcfd/pdemodel/: CMakeLists.txt
cfd/source/fcfd/pdenumerics/: CMakeLists.txt  GetIndex.hpp  IterCallbacks.hpp  PetscOptions.hpp
cfd/test/source/: flexcfd_test.cpp
extras/: saintvenant.c
petscwrap/: README.md
petscwrap/extras/: ConsoleApplication.cpp  FlexCFD.hpp  run  saintvenant
petscwrap/source/: CMakeLists.txt
petscwrap/source/fcfd/pdemodel/: ModelParams.hpp  SVE.hpp
petscwrap/source/fcfd/pdenumerics/: PetscInitException.hpp  PetscWrap.hpp  SolTools.hpp
source/numerics/petscwrap/: PetscWrap.hpp
test/: CMakeLists.txt
